--- a/.env.example
+++ b/.env.example
@@ -14,10 +14,7 @@ STRIPE_SECRET_KEY="your-stripe-secret"
 STRIPE_WEBHOOK_SECRET="your-webhook-secret"
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY="your-publishable-key"
 
-# Google Maps
-NEXT_PUBLIC_GOOGLE_MAPS_API_KEY="your-maps-key"
-NEXT_PUBLIC_GOOGLE_MAPS_MAP_ID="your-map-id"
-
+# Maps (OpenStreetMap/Leaflet stack uses public endpoints; no API key required)
 # Email
 RESEND_API_KEY="your-resend-key"
 
