--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "@socket.io/redis-adapter": "8.3.0"
   },
   "maps": {
-    "@vis.gl/react-google-maps": "1.1.0"
+    "leaflet": "1.9.4",
+    "react-leaflet": "5.0.0"
   },
   "testing": {
     "vitest": "2.1.1",
